--- a/package.json
+++ b/package.json
@@ -19,4 +19,7 @@
     "url": "https://github.com/kyocoolcool/HelloGitPackage/issues"
   },
   "homepage": "https://github.com/kyocoolcool/HelloGitPackage#readme"
+  "publishConfig": {
+   "@kyocoolcool:registry": "https://npm.pkg.github.com"
+ }
 }
